--- a/aerosales/css/app.css
+++ b/aerosales/css/app.css
@@ -258,13 +258,15 @@ body a:hover {
   text-transform: uppercase;
 }
 .input-row .btn-primary {
-  width: 215px;
+  width: 70%;
   background: #ed0000;
 }
 .input-row .btn-secondary {
-  width: calc(100% - 215px);
+  width: 30%;
   margin: 0 7px 0 0;
   background: #344252;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 .login-page {
   display: -webkit-box;
@@ -272,11 +274,11 @@ body a:hover {
   display: -ms-flexbox;
   display: flex;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   background: url("../images/bg-login.jpg") 50% 100%/cover no-repeat;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  padding: 0 20px;
+  padding: 15px;
 }
 .login-box {
   -webkit-align-self: center;
@@ -299,6 +301,11 @@ body a:hover {
 }
 .login-content {
   padding: 45px 70px 32px;
+}
+@media only screen and (max-width: 1260px) {
+  .login-content {
+    padding: 45px 15px 32px;
+  }
 }
 .login-content h1 {
   font-size: 36px;
